<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leapmotion_display_rviz2</name>
  <version>0.1.0</version>
  <description>"leapmotion_display_rviz2" is a ROS2 package to visualize in Rviz2 the information from the "leapmotion_wrapper" node</description>
  <maintainer email="kimbring2@gmail.com">kimbring2</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>leapmotion_wrapper</exec_depend>
  <exec_depend>leapmotion_components</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
